; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_mipsfbsd-tdep.c_mipsfbsd_stub_frame_prev_register.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_mipsfbsd-tdep.c_mipsfbsd_stub_frame_prev_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.frame_info = type { i32 }
%struct.mips_frame_cache = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.frame_info*, i8**, i32, i32*, i32*, i32*, i32*, i8*)* @mipsfbsd_stub_frame_prev_register to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mipsfbsd_stub_frame_prev_register(%struct.frame_info* %0, i8** %1, i32 %2, i32* %3, i32* %4, i32* %5, i32* %6, i8* %7) #0 {
  %9 = alloca %struct.frame_info*, align 8
  %10 = alloca i8**, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca %struct.mips_frame_cache*, align 8
  store %struct.frame_info* %0, %struct.frame_info** %9, align 8
  store i8** %1, i8*** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32* %3, i32** %12, align 8
  store i32* %4, i32** %13, align 8
  store i32* %5, i32** %14, align 8
  store i32* %6, i32** %15, align 8
  store i8* %7, i8** %16, align 8
  %18 = load %struct.frame_info*, %struct.frame_info** %9, align 8
  %19 = load i8**, i8*** %10, align 8
  %20 = call %struct.mips_frame_cache* @mipsfbsd_stub_frame_cache(%struct.frame_info* %18, i8** %19)
  store %struct.mips_frame_cache* %20, %struct.mips_frame_cache** %17, align 8
  %21 = load %struct.frame_info*, %struct.frame_info** %9, align 8
  %22 = load %struct.mips_frame_cache*, %struct.mips_frame_cache** %17, align 8
  %23 = getelementptr inbounds %struct.mips_frame_cache, %struct.mips_frame_cache* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %11, align 4
  %26 = load i32*, i32** %12, align 8
  %27 = load i32*, i32** %13, align 8
  %28 = load i32*, i32** %14, align 8
  %29 = load i32*, i32** %15, align 8
  %30 = load i8*, i8** %16, align 8
  %31 = call i32 @trad_frame_prev_register(%struct.frame_info* %21, i32 %24, i32 %25, i32* %26, i32* %27, i32* %28, i32* %29, i8* %30)
  ret void
}

declare dso_local %struct.mips_frame_cache* @mipsfbsd_stub_frame_cache(%struct.frame_info*, i8**) #1

declare dso_local i32 @trad_frame_prev_register(%struct.frame_info*, i32, i32, i32*, i32*, i32*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
